deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: justice-redact-backend-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: justice-redact-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
